--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -29,4 +29,5 @@
     <!--头像选择-->
     <item name="adapter_item_tag_key" type="id" />
     <item name="fab_label" type="id" />
+    <item name="custom_toolbar" type="id" />
 </resources>
