调整各种链接

--- a/app/src/main/res/layout/fragment_agreement.xml
+++ b/app/src/main/res/layout/fragment_agreement.xml
@@ -17,9 +17,8 @@
         hunt:ct_enable_theme="true"
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_tab_back_selector"
-        hunt:ct_left_title=""
         hunt:ct_left_title_color="@color/color_white"
-        hunt:ct_title_color="@color/color_black" />
+        hunt:ct_title_color="@color/color_white" />
 
     <FrameLayout
         android:layout_width="match_parent"
