--- a/app/src/main/res/layout/pick_image_fragment_dialog.xml
+++ b/app/src/main/res/layout/pick_image_fragment_dialog.xml
@@ -7,8 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="@dimen/y20">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_pick_photo"
