--- a/app/src/main/res/layout/item_share_content.xml
+++ b/app/src/main/res/layout/item_share_content.xml
@@ -6,6 +6,8 @@
 
         <import type="com.cylan.jiafeigou.n.view.adapter.item.ShareContentItem" />
 
+        <import type="android.view.View" />
+
         <variable
             name="sharedContentItem"
             type="ShareContentItem" />
@@ -15,19 +17,28 @@
             type="Integer" />
 
         <variable
-            name="unShareListener"
-            type="com.cylan.jiafeigou.n.view.adapter.item.ShareContentItem.UnShareListener" />
+            name="shareDate"
+            type="String" />
+
+        <variable
+            name="editMode"
+            type="android.databinding.ObservableBoolean" />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y67">
+        android:layout_height="@dimen/y67"
+        android:clickable="true"
+        android:descendantFocusability="blocksDescendants"
+        android:focusable="true">
 
         <ImageView
             android:id="@+id/sharedContentIcon"
             android:layout_width="@dimen/y43"
             android:layout_height="@dimen/y43"
             android:layout_marginStart="@dimen/y15"
+            android:padding="0dp"
             android:src="@drawable/bg_default_photo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,48 +46,69 @@
 
         <TextView
             android:id="@+id/sharedContentDetail"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/y15"
             android:layout_marginStart="@dimen/y15"
-            android:maxLength="14"
+            android:ellipsize="end"
+            android:maxLength="128"
+            android:maxLines="1"
             android:text="@{sharedContentItem.shareItem.desc}"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp16"
+            app:layout_constraintEnd_toStartOf="@+id/rightAction"
             app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintRight_toLeftOf="@+id/unShareContent"
             app:layout_constraintStart_toEndOf="@+id/sharedContentIcon"
             app:layout_constraintTop_toTopOf="@+id/sharedContentIcon" />
 
         <TextView
-            android:id="@+id/tv_has_share_num"
+            android:id="@+id/sharedDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/y8"
-            android:text="2017/2/5"
+            android:text="@{shareDate}"
             android:textColor="@color/color_8c8c8c"
             android:textSize="@dimen/sp12"
             app:layout_constraintStart_toStartOf="@id/sharedContentDetail"
             app:layout_constraintTop_toBottomOf="@+id/sharedContentDetail" />
 
 
-        <TextView
-            android:id="@+id/unShareContent"
+        <FrameLayout
+            android:id="@+id/rightAction"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/y28"
-            android:layout_centerVertical="true"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/y15"
-            android:background="@drawable/btn_accept_add_request_shape"
-            android:gravity="center"
-            android:onClick="@{v->unShareListener.unShare(sharedContentItem,itemPosition)}"
-            android:paddingEnd="@dimen/y14"
-            android:paddingStart="@dimen/y14"
-            android:text="@string/Tap3_ShareDevice_Delete"
-            android:textColor="@color/color_4b9fd5"
-            android:textSize="@dimen/sp13"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <!--android:onClick="@{v->unShareListener.unShare(sharedContentItem,itemPosition)}"-->
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <TextView
+                android:id="@+id/unShareContent"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/y28"
+                android:background="@drawable/btn_accept_add_request_shape"
+                android:gravity="center"
+                android:paddingEnd="@dimen/y14"
+                android:paddingStart="@dimen/y14"
+                android:text="@string/Tap3_ShareDevice_Delete"
+                android:textColor="@color/color_4b9fd5"
+                android:textSize="@dimen/sp13"
+                android:visibility="@{editMode?View.GONE:View.VISIBLE}" />
+
+            <RadioButton
+                android:id="@+id/ShareContentCheckBox"
+                android:layout_width="@dimen/y21"
+                android:layout_height="@dimen/y21"
+                android:layout_gravity="center_vertical|end"
+                android:background="@drawable/custom_rtbn_style1"
+                android:button="@null"
+                android:clickable="false"
+                android:focusable="false"
+                android:visibility="@{editMode?View.VISIBLE:View.GONE}" />
+
+        </FrameLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/y1"
