--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -223,7 +223,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="速率:自动"
+                android:text="速率:高清"
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/sp15" />
 
