--- a/app/src/main/res/layout/fragment_home_mine_friends.xml
+++ b/app/src/main/res/layout/fragment_home_mine_friends.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/recyclerview_request_add"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:overScrollMode="never"/>
+                android:overScrollMode="never" />
 
             <!--亲友列表-->
             <TextView
@@ -62,11 +62,11 @@
                 android:visibility="invisible" />
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview_relativesandfriends_list"
+                android:id="@+id/rv_friends_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:overScrollMode="never"
-                android:scrollbars="vertical"/>
+                android:scrollbars="vertical" />
         </LinearLayout>
 
         <LinearLayout
@@ -84,7 +84,6 @@
                 android:src="@drawable/icon_no_friends" />
 
             <TextView
-                android:id="@+id/btn_add_relative_and_friend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -92,6 +91,18 @@
                 android:text="@string/Tap3_ShareDevice_NoneFriends"
                 android:textColor="#aaaaaa"
                 android:textSize="@dimen/sp15" />
+
+            <com.cylan.jiafeigou.widget.LoginButton
+                android:id="@+id/btn_to_add"
+                android:layout_width="@dimen/x173"
+                android:layout_height="@dimen/y50"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/y38"
+                android:gravity="center"
+                android:text="@string/Tap3_FriendsAdd"
+                android:textColor="@color/color_4b9fd5"
+                android:textSize="@dimen/sp17"
+                hunt:lb_stroke_color="@color/color_d8d8d8" />
 
         </LinearLayout>
 
