--- a/app/src/main/res/layout/fragment_mine_friends_request_add_items.xml
+++ b/app/src/main/res/layout/fragment_mine_friends_request_add_items.xml
@@ -4,9 +4,9 @@
     android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_marginLeft="@dimen/x15"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y67">
+        android:layout_height="@dimen/y67"
+        android:layout_marginLeft="@dimen/x15">
 
         <RelativeLayout
             android:id="@+id/rl_out_of_accept_btn"
@@ -14,68 +14,66 @@
             android:layout_height="wrap_content">
 
             <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
-                android:layout_centerVertical="true"
                 android:id="@+id/iv_userhead"
-                android:src="@drawable/img_me_list_head"
                 android:layout_width="@dimen/x50"
-                android:layout_height="@dimen/y50" />
+                android:layout_height="@dimen/y50"
+                android:layout_centerVertical="true"
+                android:src="@drawable/img_me_list_head" />
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_toRightOf="@id/iv_userhead"
-                android:paddingLeft="@dimen/x15"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/y67">
+                android:layout_height="@dimen/y67"
+                android:layout_toRightOf="@id/iv_userhead"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/x15">
 
                 <RelativeLayout
-                    android:layout_weight="1"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
                     <TextView
                         android:id="@+id/tv_username"
-                        android:textSize="@dimen/sp16"
-                        android:textColor="@color/color_333333"
-                        android:text="小名"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:text="小名"
+                        android:textColor="@color/color_333333"
+                        android:textSize="@dimen/sp16" />
 
                     <TextView
                         android:id="@+id/tv_add_message"
-                        android:paddingTop="@dimen/y8"
-                        android:layout_below="@id/tv_username"
-                        android:textSize="@dimen/sp12"
-                        android:textColor="@color/color_8c8c8c"
-                        android:text="我是小姨"
-                        android:singleLine="true"
-                        android:ellipsize="end"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/tv_username"
+                        android:ellipsize="end"
+                        android:paddingTop="@dimen/y8"
+                        android:singleLine="true"
+                        android:text="我是小姨"
+                        android:textColor="@color/color_8c8c8c"
+                        android:textSize="@dimen/sp12" />
                 </RelativeLayout>
 
                 <TextView
                     android:id="@+id/tv_accept_request"
-                    android:layout_marginRight="@dimen/x15"
-                    android:gravity="center"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:background="@drawable/btn_accept_add_request_shape"
-                    android:text="@string/Tap3_FriendsAdd_Agree"
-                    android:textSize="@dimen/sp13"
-                    android:textColor="@color/color_4b9fd5"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/x15"
+                    android:background="@drawable/btn_accept_add_request_shape"
+                    android:gravity="center"
+                    android:text="@string/Tap3_FriendsAdd_Agree"
+                    android:textColor="@color/color_4b9fd5"
+                    android:textSize="@dimen/sp13" />
             </LinearLayout>
 
         </RelativeLayout>
 
         <View
-            android:layout_alignParentBottom="true"
             android:id="@+id/view_line"
-            android:background="@color/color_f2f2f2"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/y1" />
+            android:layout_height="@dimen/y1"
+            android:layout_alignParentBottom="true"
+            android:background="@color/color_f2f2f2" />
     </RelativeLayout>
 
 </LinearLayout>
