--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -25,14 +24,20 @@
             android:textColor="@color/color_white"
             android:textSize="@dimen/sp16" />
 
-        <ImageButton
+        <com.cylan.jiafeigou.widget.ImageViewTip
             android:id="@+id/imgv_toolbar_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
             android:background="@android:color/transparent"
             android:padding="@dimen/y14"
-            android:src="@drawable/icon_setting" />
+            android:src="@drawable/icon_setting"
+            app:t_border_color="@color/color_white"
+            app:t_border_width="@dimen/y1"
+            app:t_point_color="@color/color_red_dot_f43531"
+            app:t_radius="@dimen/x4"
+            app:t_round_image="true"
+            app:t_show_point="false" />
     </FrameLayout>
 
     <RelativeLayout
