分享管理,有 bug ,待完善

--- a/app/src/main/res/layout/item_share_content.xml
+++ b/app/src/main/res/layout/item_share_content.xml
@@ -33,7 +33,7 @@
         android:descendantFocusability="blocksDescendants"
         android:focusable="true">
 
-        <ImageView
+        <com.cylan.jiafeigou.support.photoselect.CircleImageView
             android:id="@+id/sharedContentIcon"
             android:layout_width="@dimen/y43"
             android:layout_height="@dimen/y43"
