--- a/app/src/main/res/layout/dialog_share_option_menu.xml
+++ b/app/src/main/res/layout/dialog_share_option_menu.xml
@@ -2,21 +2,25 @@
 
     <data>
 
+        <import
+            alias="option"
+            type="com.cylan.jiafeigou.support.share.ShareConstant" />
+
         <variable
-            name="shareListener"
-            type="android.view.View.OnClickListener" />
+            name="optionListener"
+            type="com.cylan.jiafeigou.support.share.ShareOptionMenuDialog.ShareOptionClickListener" />
     </data>
 
 
     <android.support.v7.widget.CardView
         android:id="@+id/lLayout_dialog_share_wonderful"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@color/color_white"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/y280"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical">
@@ -30,25 +34,24 @@
                 android:drawableStart="@drawable/icon_friend"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:onClick="@{shareListener}"
+                android:onClick="@{()->optionListener.onShareOptionClick(option.SHARE_PLATFORM_TYPE_TIME_LINE)}"
                 android:paddingEnd="@dimen/y20"
                 android:paddingStart="@dimen/y20"
-                android:tag="0"
                 android:text="@string/Tap2_Share_Moments" />
 
             <TextView
                 android:id="@+id/tv_share_to_wechat_friends"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y48"
-                android:tag="1"
                 android:clickable="true"
                 android:drawablePadding="@dimen/y20"
                 android:drawableStart="@drawable/icon_wechat"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:onClick="@{shareListener}"
+                android:onClick="@{()->optionListener.onShareOptionClick(option.SHARE_PLATFORM_TYPE_WECHAT)}"
                 android:paddingEnd="@dimen/y20"
                 android:paddingStart="@dimen/y20"
+                android:tag="1"
                 android:text="@string/Tap2_Share_Wechat" />
 
             <TextView
@@ -57,13 +60,13 @@
                 android:layout_height="@dimen/y48"
                 android:clickable="true"
                 android:drawablePadding="@dimen/y20"
-                android:tag="2"
                 android:drawableStart="@drawable/share_icon_qq"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:onClick="@{shareListener}"
+                android:onClick="@{()->optionListener.onShareOptionClick(option.SHARE_PLATFORM_TYPE_QQ)}"
                 android:paddingEnd="@dimen/y20"
                 android:paddingStart="@dimen/y20"
+                android:tag="2"
                 android:text="QQ"
                 android:visibility="visible" />
 
@@ -76,10 +79,10 @@
                 android:drawableStart="@drawable/share_icon_qqspace"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:tag="3"
-                android:onClick="@{shareListener}"
+                android:onClick="@{()->optionListener.onShareOptionClick(option.SHARE_PLATFORM_TYPE_QZONE)}"
                 android:paddingEnd="@dimen/y20"
                 android:paddingStart="@dimen/y20"
+                android:tag="3"
                 android:text="@string/Qzone_QQ"
                 android:visibility="visible" />
 
@@ -88,14 +91,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y48"
                 android:clickable="true"
-                android:tag="4"
                 android:drawablePadding="@dimen/y20"
                 android:drawableStart="@drawable/share_icon_weibo"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:onClick="@{shareListener}"
+                android:onClick="@{()->optionListener.onShareOptionClick(option.SHARE_PLATFORM_TYPE_WEIBO)}"
                 android:paddingEnd="@dimen/y20"
                 android:paddingStart="@dimen/y20"
+                android:tag="4"
                 android:text="@string/Weibo"
                 android:visibility="visible" />
 
@@ -105,13 +108,13 @@
                 android:layout_height="@dimen/y48"
                 android:clickable="true"
                 android:drawablePadding="@dimen/y20"
-                android:tag="5"
                 android:drawableStart="@drawable/twitter_icon_twitter"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:onClick="@{shareListener}"
+                android:onClick="@{()->optionListener.onShareOptionClick(option.SHARE_PLATFORM_TYPE_TWITTER)}"
                 android:paddingEnd="@dimen/y20"
                 android:paddingStart="@dimen/y20"
+                android:tag="5"
                 android:text="twitter" />
 
             <TextView
@@ -119,14 +122,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y48"
                 android:clickable="true"
-                android:tag="6"
                 android:drawablePadding="@dimen/x20"
                 android:drawableStart="@drawable/share_icon_facebook"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:onClick="@{shareListener}"
+                android:onClick="@{()->optionListener.onShareOptionClick(option.SHARE_PLATFORM_TYPE_FACEBOOK)}"
                 android:paddingEnd="@dimen/x20"
                 android:paddingStart="@dimen/x20"
+                android:tag="6"
                 android:text="facebook" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
